@@ -1,1 +1,2 @@
+--enable-preview
 -Xmx512m
